Replace guava collections with java 9 api